--- a/9-Recursion/9-Recursion.csproj
+++ b/9-Recursion/9-Recursion.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D8CFCCFB-33BC-435A-B954-A6466E58EB77}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Recursion</RootNamespace>
+    <RootNamespace>HackerRank</RootNamespace>
     <AssemblyName>Recursion</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
