--- a/28-RegEx/28-RegEx.csproj
+++ b/28-RegEx/28-RegEx.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6492A030-7F3F-401C-9C82-BCA2024C3D22}</ProjectGuid>
+    <ProjectGuid>{8B55D32D-403C-4ED0-9B0F-C51C2542A148}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>HackerRank</RootNamespace>
-    <AssemblyName>Testing</AssemblyName>
+    <AssemblyName>RegEx</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Testing.cs" />
+    <Compile Include="RegEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
